User06PublicIP.tf
resource "azurerm_public_ip" "myterraformpublicip" {
    name                         = "user06PublicIP"
    location                     = "koreacentral"
    resource_group_name          = "${azurerm_resource_group.myterraformgroup.name}"
    allocation_method            = "Dynamic"

    tags {
        environment = "User06 Demo"
    }
}
